# 21cmVAE

./: .gitignore  .readthedocs.yml  21cmVAE.py  21cm_em_12_sim_training.py  Figures.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  Training.ipynb  VeryAccurateEmulator.py  build_models.py  emulator_env.yml  environment.yml  hyperparameter_tuner.py  main.py  nov7_manyems.npy  preprocess.py  pyproject.toml  requirements.txt  sample_notebook.ipynb  setup.cfg  setup.py  test_notebook.ipynb  train.py  training_tools.py
.github/: dependabot.yml
.github/workflows/: push.yml
21cmVAE/: VeryAccurateEmulator.py
Notebooks/: Training.ipynb
RESULTS/: Figures.ipynb  Figures_Tables.ipynb  ds_size_emulator_errors.npy  nov8_manyaeems.npy  train_20_emulators.npy
RESULTS/PLOTS/: comparison.eps  data_density.eps  ds_comparison.eps  error_distribution.eps  error_distribution_withAE.eps  fig7.eps  hist.eps  tsne.eps
RESULTS/ae_res_nov9/: ae0.h5  ae13.h5  ae15.h5  ae19.h5  ae2.h5  ae3.h5  aeerr.npy  de0.h5  de13.h5  de15.h5  de2.h5  de3.h5  em0.h5  em13.h5  em15.h5  em2.h5  em3.h5  en0.h5  en13.h5  en15.h5  en2.h5  en3.h5
RESULTS/train_20_ae_emulators/: aeerr.npy  emerr.npy
Sample_Notebooks/: Training.ipynb  sample_notebook.ipynb  train_many_ae.ipynb
VeryAccurateEmulator/: VeryAccurateEmulator.py  __init__.py  build_models.py  emulator.py  hyperparameter_tuner.py  preprocess.py  tests.ipynb  training_tools.py
docs/: conf.py  index.rst  install.rst  pyproject.toml
docs/Sample_Notebooks/: sample_notebook.ipynb  train_many_ae.ipynb
docs/_build/doctrees/: environment.pickle  index.doctree  introduction.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
models/: direct_emulator.h5
models/autoencoder_based_emulator/: ae_emulator.h5  autoencoder.h5  decoder.h5  encoder.h5
notebooks/: Training.ipynb  sample_notebook.ipynb  train_many_ae.ipynb
tests/: test_build_models.py  test_data.py  test_default_em.py  test_emulator.py  test_hp_tuner.py  test_preprocess.py
(+1 files in other folders)
