[metadata]
name = VeryAccurateEmulator
version = 3.1.0
description = 21cmVAE: A Very Accurate Emulator of the 21-cm Global Signal
long_description = file: README.rst
author = Christian Hellum Bye
author_email = chb@berkeley.edu
license = MIT
url = https://github.com/christianhbye/21cmVAE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages=find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    jupyter
    matplotlib
    numpy
    tensorflow
    tqdm

[options.extras_require]
dev =
    black
    flake8
    pytest
    tox

[options.package_data]
* = *.rst, VeryAccurateEmulator/dataset_21cmVAE.h5, VeryAccurateEmulator/models*
